Fix visibility of highlight

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -133,9 +133,10 @@
 }
 
 .highlighted-label {
-    -fx-background-color: yellow;
-    -fx-text-fill: black;
-    -fx-padding: 0 1 0 1;
+    -fx-background-color: rgba(255, 255, 0, 0.50); /* semi-transparent yellow */
+    -fx-font-weight: bold;
+    -fx-padding: 1 2 1 2;
+    -fx-background-radius: 3;
 }
 
 .stack-pane {
